--- a/public/css/about.css
+++ b/public/css/about.css
@@ -871,7 +871,7 @@ html, body {
     position: absolute;
     top: 80px;
     left: 20px;
-    color: var(--color-secondary);
+    color: #FFD700;
     font-weight: 200;
     z-index: 2;
 }
@@ -907,6 +907,34 @@ html, body {
         rgba(0, 0, 0, 0.8) 100%
     );
     z-index: 1;
+}
+
+.tag-container {
+    position: absolute;
+    top: 60px;
+    right: 30px;
+    display: flex;
+    gap: 10px;
+    z-index: 2;
+}
+
+.tag {
+    font-family: var(--font-family);
+    padding: 8px 20px;
+    border-radius: 50px;
+    font-size: 14px;
+    font-weight: 500;
+
+}
+
+.tag-domestic {
+    color: rgba(255, 215, 0, 1);
+    background-color: rgba(255, 215, 0, 0.3);
+}
+
+.tag-international {
+    color: rgba(0, 150, 200, 1);
+    background-color: rgba(0, 150, 200, 0.3);
 }
 
 @media (max-width: 1400px) {
@@ -1200,18 +1228,18 @@ html, body {
     position: absolute;
     top: 30px;
     left: 30px;
-    height: 120px;
+    width: 113px;
     z-index: 2;
     display: block;
 }
 
 .category {
     font-family: var(--font-family);
-    font-size: 24px;
+    font-size: 14px;
     position: absolute;
-    top: 170px;
+    top: 150px;
     left: 30px;
-    color: white;
+    color: var(--color-secondary);
     font-weight: 500;
     z-index: 2;
 }
@@ -1221,7 +1249,7 @@ html, body {
     font-size: 14px;
     position: absolute;
     color: #A1A1AA;
-    top: 200px;
+    top: 190px;
     left: 30px;
     right: 30px;
     z-index: 2;
