--- a/public/css/about.css
+++ b/public/css/about.css
@@ -876,6 +876,41 @@ html, body {
     z-index: 2;
 }
 
+.category-highlight {
+    font-family: var(--font-family);
+    padding-top: 90px;
+    padding-bottom: 20px;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    color: #FFD700;
+    font-weight: 400;
+    z-index: 2;
+    text-decoration: none;
+}
+
+.card-ecosystem-content-highlight {
+    font-family: var(--font-family);
+    font-size: 14px;
+    position: relative;
+    color: #ffffff;
+    line-height: 20px;
+    z-index: 2;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+.card-ecosystem-highlight a,
+.card-ecosystem-highlight a:hover,
+.card-ecosystem-highlight a:visited,
+.card-ecosystem-highlight a:active {
+    text-decoration: none !important;
+    color: inherit;
+}
+
+
 .card-content {
     position: absolute;
     top: 110px;
@@ -912,6 +947,15 @@ html, body {
 .tag-container {
     position: absolute;
     top: 60px;
+    right: 30px;
+    display: flex;
+    gap: 10px;
+    z-index: 2;
+}
+
+.tag-container-highlight {
+    position: absolute;
+    top: 40px;
     right: 30px;
     display: flex;
     gap: 10px;
@@ -1197,6 +1241,25 @@ html, body {
     border-radius: 12px;
 }
 
+.card-ecosystem-highlight {
+    position: relative;
+    border-radius: 0px;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+    height: 330px;
+    grid-column: span 3;
+    border-radius: 12px;
+}
+
+.card-ecosystem-highlight-grid {
+    position: relative;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 1600px;
+}
+
 .card-ecosystem .background-image {
     position: absolute;
     top: 0;
@@ -1233,6 +1296,15 @@ html, body {
     display: block;
 }
 
+.card-ecosystem-image-highlight {
+    position: relative;
+    top: 30px;
+    left: 80px;
+    width: 513px;
+    z-index: 2;
+    display: block;
+}
+
 .category {
     font-family: var(--font-family);
     font-size: 14px;
@@ -1254,6 +1326,8 @@ html, body {
     right: 30px;
     z-index: 2;
 }
+
+
 
 .card-ecosystem h2 {
     font-family: var(--font-family);
@@ -1281,4 +1355,11 @@ html, body {
     position: relative;
     font-size: 28px;
     text-align: center;
+}
+
+.mandiri-ecosystem-title {
+    font-family: var(--font-family);
+    font-size: 32px;
+    color: #FFFFFF;
+    padding-left: 50px;
 }
