--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -133,12 +133,12 @@ body.menu-open {
 .nav-item.active::before {
     content: '';
     position: absolute;
-    top: 50%;
+    top: calc(50% + 20px);
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 120px;
-    height: 40px;
-    background-image: url('../images/menubg.png');
+    width: 203px;
+    height: 20px;
+    background-image: url('../images/menubg2.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
