--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -572,6 +572,16 @@
     transition: opacity 0.3s ease;
 }
 
+.masonry-grid-investment-section-funding {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px;
+    padding: 0;
+    margin: 0px auto;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
+
 .masonry-grid-investment-section-grey {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -666,6 +676,12 @@
 
 .grid-headline-description-card{
     grid-column: span 2;
+    padding-right: 60px;
+}
+
+.grid-headline-description-card-funding{
+    padding-left: 60px;
+    grid-column: span 4;
     padding-right: 60px;
 }
 
