--- a/public/css/platform.css
+++ b/public/css/platform.css
@@ -1050,3 +1050,58 @@
     margin-top: auto;
     text-align: right;
 }
+
+
+
+/* ==========================================================================
+   Headline Section
+   ========================================================================== */
+
+.headline-section-two {
+    padding: 50px 0 50px 0px;
+    background-color: #18181B;
+    margin-bottom: 50px;
+}
+
+.headline-grid-counter {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 0 40px;
+}
+
+.headline-card-two {
+    padding: 20px 24px;
+    display: flex;
+    flex-direction: column;
+    font-family: var(--font-family);
+}
+
+.headline-card-two h1 {
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 100;
+    margin-bottom: -18px;
+}
+
+.headline-card-two p {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 100;
+    margin-bottom: -18px;
+}
+
+.counter {
+    color: #EFA32F;
+    font-size: 64px;
+    margin: 10px 0 0 0;
+    font-weight: 500;
+    text-align: center;
+}
+
+.headline-card-two.middle-border {
+    border-left: 1px solid #3F3F46;
+    border-right: 1px solid #3F3F46;
+}
