--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1294,15 +1294,18 @@ html, body {
 .card-ecosystem-hover .hover-image {
     height: auto;
     width: 113px;
+    padding-bottom: 10px;
+    margin: 5px;
 }
 
 .card-ecosystem-hover .hover-title {
     color: var(--color-white);
     font-size: 20px;
     font-family: var(--font-family);
+    margin: 5px;
 }
 
-.card-ecosystem-hover h4 {
+.card-ecosystem-hover h2 {
     font-size: 14px;
     font-family: var(--font-family);
     color: #EFA32F;
@@ -1313,6 +1316,20 @@ html, body {
     color: var(--color-white);
     font-size: 14px;
     font-family: var(--font-family);
+    margin: 5px 5px 10px 5px;
+}
+
+.card-ecosystem-hover h3 {
+    font-size: 14px;
+    font-family: var(--font-family);
+    color: #EFA32F;
+    margin: 5px;
+}
+
+.card-ecosystem-hover h4 {
+    font-size: 14px;
+    font-family: var(--font-family);
+    color: #EFA32F;
     margin: 5px;
 }
 
