--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -649,7 +649,7 @@
     gap: 16px;
     padding: 60px 20px;
     max-width: 1600px;
-    margin: 120px auto 0px auto;
+    margin: 80px auto 0px auto;
     opacity: 1;
     transition: opacity 0.3s ease;
     background-color: #18181B;
@@ -740,13 +740,9 @@
 }
 
 .grid-headline-description-card-funding{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 24px;
-    padding: 0;
-    margin: 0px auto;
-    opacity: 1;
-    transition: opacity 0.3s ease;
+    grid-column: span 3;
+    padding-right: 60px;
+    padding-left: 60px;
 
 }
 
@@ -1966,10 +1962,12 @@
     overflow: hidden;
     background-size: cover;
     background-position: center;
-    height: 200px;
+    height: 339px;
     grid-column: span 3;
     display: flex;
-    padding: 30px;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 30px;
 
     background: linear-gradient(
         135deg,
@@ -1977,7 +1975,6 @@
         #18181B 50%,
         #31302C 100%
     );
-    z-index: 1;
 }
 
 .card-funding-large .background-image {
@@ -2023,7 +2020,19 @@
     color: white;
     font-weight: 500;
     z-index: 3;
-    top: 190px;
+    top: 180px;
+    padding: 0 30px;
+    box-sizing: border-box;
+}
+
+.funding-category-large {
+    position: absolute;
+    font-family: var(--font-family);
+    font-size: 20px;
+    color: white;
+    font-weight: 500;
+    z-index: 3;
+    top: 180px;
     padding: 0 30px;
     box-sizing: border-box;
 }
@@ -2031,6 +2040,7 @@
 .card-funding-content {
     position: absolute;
     font-size: 14px;
+    line-height: 21px;
     color: #A1A1AA;
     z-index: 2;
     top: 250px;
@@ -2043,31 +2053,24 @@
     text-overflow: ellipsis;
 }
 
-.funding-category-large {
-    position: absolute;
-    font-family: var(--font-family);
-    font-size: 20px;
-    color: white;
-    font-weight: 500;
-    z-index: 3;
-    top: 60px;
-    left: 40%;
-    transform: translateY(-50%);
-}
-
 .card-funding-content-large {
     position: absolute;
     font-family: var(--font-family);
     font-size: 14px;
+    line-height: 21px;
     color: #A1A1AA;
     z-index: 2;
-    top: 120px;
-    left: 40%;
-    right: 30px;
+    top: 250px;
+    padding: 0 30px;
     transform: translateY(-50%);
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
+    width: 900px;
 }
+
+
+
+
 
 .card-funding h2 {
     font-family: var(--font-family);
